--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     background-color: #777;
     font-family: 'Arial', 'Helvetica Neue,' Helvetica, sans-serif;
     font-size: 18px;
+    width: 960px;
+    margin: 0 auto;
 }
 
 header {
@@ -17,6 +19,47 @@ header {
 }
 
 nav {
+    background-color: #ebebeb;
+    padding: 20px;
+    margin: 20px;
+    color: #777;
+}
+
+section {
+    width: 495px;
+    background-color: #ebebeb;
+    padding: 20px;
+    margin: 20px;
+    color: #777;
+}
+
+article {
+    background-color: #777;
+    padding: 20px;
+    margin: 20px;
+    color: #ebebeb
+}
+
+.h1 {
+    background-color: #ebebeb;
+    padding: 10px;
+    color: #777;
+}
+
+p {
+    background-color: #ebebeb;
+    padding: 20px;
+    color: #777;
+}
+
+aside {
+    background-color: #ebebeb;
+    padding: 20px;
+    margin: 20px;
+    color: #777;
+}
+
+footer {
     background-color: #ebebeb;
     padding: 20px;
     margin: 20px;
