html css update 3

--- a/style.css
+++ b/style.css
@@ -13,31 +13,36 @@ body {
 
 header {
     background-color: #ebebeb;
-    padding: 20px;
-    margin: 20px;
+    padding: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     color: #777;
 }
 
 nav {
     background-color: #ebebeb;
-    padding: 20px;
-    margin: 20px;
+    padding: 30px;
     color: #777;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 section {
     width: 495px;
     background-color: #ebebeb;
     padding: 20px;
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
     color: #777;
+    float: left;
 }
 
 article {
     background-color: #777;
-    padding: 20px;
+    padding: 30px;
     margin: 20px;
-    color: #ebebeb
+    color: #ebebeb;
 }
 
 .h1 {
@@ -55,13 +60,19 @@ p {
 aside {
     background-color: #ebebeb;
     padding: 20px;
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10px;
     color: #777;
+    float: right;
+    height: 375px;
+    width: 405px;
 }
 
 footer {
     background-color: #ebebeb;
-    padding: 20px;
-    margin: 20px;
+    padding: 30px;
+    margin-top: 20px;
     color: #777;
+    clear: both;
 }
